# Emergence-World

./: .coverage  .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  README.md  REPRODUCTION_GUIDE.md  REPRODUCTION_GUIDE_ZH.md  agents.md  alembic.ini  basic_logic.md  project_command.md  pyproject.toml  requirements.txt
codex-instruct-history/: 2026-06-13_11-05-08_UTC_conversation.md  2026-06-14_12-07-29_UTC_memory-system_en.md  2026-06-14_12-07-29_UTC_memory-system_zh.md  2026-06-14_22-45-01_UTC_agent-loop.md  2026-06-15_22-09-01_UTC_manifest.md  2026-06-16_13-39-43_UTC_doubao-provider_zh.md  2026-06-21_04-24-59_UTC_project-understanding-and-observability_zh.md  2026-07-07_14-53-29_UTC_seed-tool-implementation_zh.md
doc_CN/: ARCHITECTURE.md  ECONOMY.md  GOVERNANCE.md  LICENSE  MEMORY.md  OBSERVABILITY.md  ORCHESTRATION.md
doc_CN/agent_profiles/: README.md
doc_CN/data/: agent_manifesto.md  constitution.md
doc_CN/landmarks/: 1_birch_row.md  1_maple_row.md  2_birch_row.md  2_maple_row.md  3_birch_row.md  3_maple_row.md  4_birch_row.md  4_maple_row.md  5_birch_row.md  5_maple_row.md  6_birch_row.md  README.md  (+22 more)
docs/: DOUBAO_PROVIDER_RUNBOOK_ZH.md  LICENSE  OBSERVABILITY.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts
prompts/: agent_turn_v1.md
tests/: __init__.py  test_agents.py  test_api.py  test_autonomous.py  test_db.py  test_manifest.py  test_memory.py  test_observability.py  test_seed.py  test_society.py  test_tools.py  test_world.py
(+139 files in other folders)
